<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="Settings"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/icaltitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ical_url"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/timetableurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_hint"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/invalid_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/invalid_url"
            android:textColor="#ff0000"
            android:visibility="invisible" />

        <Button
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="15dp"
            android:text="@string/button_download" />

    </RelativeLayout>

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</LinearLayout>